# velo

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
crates/velo-cli/: Cargo.toml
crates/velo-cli/src/: main.rs
crates/velo-core/: Cargo.toml
crates/velo-core/src/: error.rs  lib.rs
crates/velo-core/src/collection/: mod.rs
crates/velo-core/src/environment/: mod.rs
crates/velo-core/src/executor/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: BasePathModal.tsx  EmptyState.tsx  EnvModal.tsx  Icon.tsx  RequestEditor.tsx  ResponsePane.tsx  Sidebar.tsx  Splitter.tsx  TopBar.tsx
ui/src/hooks/: useKeyboardShortcuts.ts
